# raytracer

./: .gitmodules  meson.build
include/: ray.hpp  sphere.hpp
src/: main.cpp  ray.cpp  sphere.cpp
